add mappers, pagination for users and items, add auth-success-handler